@@ -83,6 +83,7 @@ import org.apache.solr.embedded.JettyConfig;
 import org.apache.solr.embedded.JettySolrRunner;
 import org.apache.solr.util.TimeOut;
 import org.apache.solr.util.tracing.SimplePropagator;
+import org.apache.solr.util.tracing.TraceUtils;
 import org.apache.zookeeper.KeeperException;
 import org.eclipse.jetty.server.handler.HandlerWrapper;
 import org.eclipse.jetty.servlet.ServletHolder;
@@ -1243,6 +1244,7 @@ public class MiniSolrCloudCluster {
       // eager init to prevent OTEL init races caused by test setup
       if (!disableTraceIdGeneration && TracerConfigurator.TRACE_ID_GEN_ENABLED) {
         SimplePropagator.load();
+        injectRandomRecordingFlag();
       }
 
       JettyConfig jettyConfig = jettyConfigBuilder.build();
@@ -1298,6 +1300,24 @@ public class MiniSolrCloudCluster {
     public Builder withTraceIdGenerationDisabled() {
       this.disableTraceIdGeneration = true;
       return this;
+    }
+
+    /**
+     * Randomizes the tracing Span::isRecording check.
+     *
+     * <p>This will randomize the Span::isRecording check so we have better coverage of all methods
+     * that deal with span creation without having to enable otel module.
+     *
+     * <p>It only makes sense to call this if we are using the alwaysOn tracer, the OTEL tracer
+     * already has this flag turned on and randomizing it would risk not recording trace data.
+     *
+     * <p>Note. Tracing is not a SolrCloud only feature. this method is placed here for convenience
+     * only, any test can make use of this example for more complete coverage of the tracing
+     * mechanics.
+     */
+    private void injectRandomRecordingFlag() {
+      boolean isRecording = LuceneTestCase.rarely();
+      TraceUtils.IS_RECORDING = (ignored) -> isRecording;
     }
   }
 }
